9. Лямбда выражения и Collection Framework [#505026]